tests/compiletests/ui/lang/asm/issue-1002.stderr
error: using `OpReturn` to return from within `asm!` is disallowed
  --> $DIR/issue-1002.rs:10:9
   |
10 |         asm!("OpReturn", options(noreturn));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: resuming execution, without falling through the end of the `asm!` block, is always undefined behavior

error: using `OpReturnValue` to return from within `asm!` is disallowed
  --> $DIR/issue-1002.rs:16:9
   |
16 | /         asm!(
17 | |             "OpReturnValue {x}",
18 | |             x = in(reg) x,
19 | |             options(noreturn),
20 | |         );
   | |_________^
   |
   = note: resuming execution, without falling through the end of the `asm!` block, is always undefined behavior

error: using `OpReturn` to return from within `asm!` is disallowed
  --> $DIR/issue-1002.rs:26:9
   |
26 | /         asm!(
27 | |             "OpReturn",          // close active block
28 | |             "%unused = OpLabel", // open new block
29 | |         );
   | |_________^
   |
   = note: resuming execution, without falling through the end of the `asm!` block, is always undefined behavior

error: using `OpReturnValue` to return from within `asm!` is disallowed
  --> $DIR/issue-1002.rs:35:9
   |
35 | /         asm!(
36 | |             "OpReturnValue {x}", // close active block
37 | |             "%unused = OpLabel", // open new block
38 | |             x = in(reg) x
39 | |         );
   | |_________^
   |
   = note: resuming execution, without falling through the end of the `asm!` block, is always undefined behavior

error: aborting due to 4 previous errors

